[tool.poetry]
name = "pyExoyOne"
version = "0.1.12"
description = "Python library to configure and control the Exoy(tm) ONE."
authors = ["Avi Miller <me@dje.li>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Djelibeybi/pyExoyOne"
documentation = "https://github.com/Djelibeybi/pyExoyOne"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: MkDocs",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["exoy", "exoyone", "infinite-dodecahedron"]
packages = [
    { include = "exoyone", from = "src" },
    { include = "moxyone", from = "tests" },
]

[tool.poetry.urls]
Homepage = "https://djelibeybi.github.io/pyExoyOne/"
Changelog = "https://github.com/Djelibeybi/pyExoyOne/blob/main/CHANGELOG.md"
Documentation = "https://djelibeybi.github.io/pyExoyOne/"
Issues = "https://github.com/Djelibeybi/pyExoyOne/issues"
Repository = "https://github.com/Djelibeybi/pyExoyOne/"

[tool.poetry.scripts]
exoyone = "exoyone.__main__:app"
moxyone = "moxyone.__main__:app"

[tool.poetry.dependencies]
python = "^3.12"
rich = ">=10"
zeroconf = "^0.135.0"
camel-converter = "^4.0.0"
typer = "^0.12.3"
asyncio-dgram = "^2.2.0"
backoff = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.6.1"
ruff-lsp = "^0.0.57"
pre-commit = "^3.8.0"
pytest-asyncio = "^0.24.0"
pytest-xprocess = "^1.0.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
mkdocs-typer = "^0.0.3"
mkdocstrings = { extras = ["python"], version = "^0.26.0" }
mkdocs-git-revision-date-localized-plugin = "^1.2.6"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["src/exoyone/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore*", "ci*"]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[tool.pytest.ini_options]
addopts = """\
    -v
    -Wdefault
    --capture=tee-sys
    --cov=exoyone
    --cov-report=term-missing:skip-covered
    --cov-report=xml
    --cov-report=html
    --cov-branch
    --junitxml=junit.xml
    """
pythonpath = ["src"]
log_cli = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D401", # First line of docstring should be in imperative mood
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
select = [
    "B",   # flake8-bugbear
    "D",   # flake8-docstrings
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit
    "F",   # pyflake
    "E",   # pycodestyle
    "W",   # pycodestyle
    "UP",  # pyupgrade
    "I",   # isort
    "RUF", # ruff specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D100", "D101", "D102", "D103", "D104", "S101"]
"setup.py" = ["D100"]
"conftest.py" = ["D100"]
"docs/conf.py" = ["D100"]

[tool.ruff.lint.isort]
known-first-party = ["exoyone", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = ['docs/.*', 'setup.py']

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
