[project]
name = "pyExoyOne"
version = "1.0.13"
description = "Python library to configure and control the Exoy(tm) ONE."
authors = [{ name = "Avi Miller", email = "me@dje.li" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: MkDocs",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["exoy", "exoyone", "infinite-dodecahedron"]
dependencies = [
    "rich>=10",
    "zeroconf>=0.148.0",
    "camel-converter>=5.0.0",
    "typer>=0.21.0",
    "asyncio-dgram>=3.0.0",
    "backoff>=2.2.1",
]

[project.urls]
Homepage = "https://djelibeybi.github.io/pyExoyOne/"
Changelog = "https://github.com/Djelibeybi/pyExoyOne/blob/main/CHANGELOG.md"
Documentation = "https://djelibeybi.github.io/pyExoyOne/"
Issues = "https://github.com/Djelibeybi/pyExoyOne/issues"
Repository = "https://github.com/Djelibeybi/pyExoyOne/"

[project.scripts]
exoyone = "exoyone.__main__:app"
moxyone = "moxyone.__main__:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
    "pre-commit>=4.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-xprocess>=1.0.2",
    "pytest-cov>=7.0.0",
    "ty>=0.0.1a10",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.31",
    "mkdocs-typer>=0.0.3",
    "mkdocstrings[python]>=1.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exoyone", "tests/moxyone"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests/moxyone"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/exoyone/__init__.py:__version__"]
build_command = """
    python -m pip install uv
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = ["chore*", "ci*"]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true

[tool.pytest.ini_options]
addopts = """\
    -v
    -Wdefault
    --capture=tee-sys
    --cov=exoyone
    --cov-report=term-missing:skip-covered
    --cov-report=xml
    --cov-report=html
    --cov-branch
    --junitxml=junit.xml
    """
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
log_cli = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D401", # First line of docstring should be in imperative mood
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]
select = [
    "B",   # flake8-bugbear
    "D",   # flake8-docstrings
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit
    "F",   # pyflake
    "E",   # pycodestyle
    "W",   # pycodestyle
    "UP",  # pyupgrade
    "I",   # isort
    "RUF", # ruff specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D100", "D101", "D102", "D103", "D104", "S101"]
"conftest.py" = ["D100"]
"docs/conf.py" = ["D100"]

[tool.ruff.lint.isort]
known-first-party = ["exoyone", "tests"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]
